public/analytics/v0.4/_sources/reference/tmlt/analytics/_query_expr_compiler/_output_schema_visitor/index.rst.txt
:orphan:



*****************************
_output_schema_visitor
*****************************

.. py:module:: tmlt.analytics._query_expr_compiler._output_schema_visitor

.. autoapi-nested-parse::

   Defines a visitor for determining the output schemas of query expressions.











Classes
=======

.. list-table::

   * - :class:`.OutputSchemaVisitor`
     - A visitor to get the output schema of a query expression.

   
.. py:class:: OutputSchemaVisitor(catalog)

   Bases: :class:`tmlt.analytics.query_expr.QueryExprVisitor`

   A visitor to get the output schema of a query expression.



   .. list-table:: Methods

      * - :meth:`.visit_private_source`
        - Return the resulting schema from evaluating a PrivateSource.
      * - :meth:`.visit_rename`
        - Returns the resulting schema from evaluating a Rename.
      * - :meth:`.visit_filter`
        - Returns the resulting schema from evaluating a Filter.
      * - :meth:`.visit_select`
        - Returns the resulting schema from evaluating a Select.
      * - :meth:`.visit_map`
        - Returns the resulting schema from evaluating a Map.
      * - :meth:`.visit_flat_map`
        - Returns the resulting schema from evaluating a FlatMap.
      * - :meth:`.visit_join_private`
        - Returns the resulting schema from evaluating a JoinPrivate.
      * - :meth:`.visit_join_public`
        - Returns the resulting schema from evaluating a JoinPublic.
      * - :meth:`.visit_replace_null_and_nan`
        - Returns the resulting schema from evaluating a ReplaceNullAndNan.
      * - :meth:`.visit_replace_infinity`
        - Returns the resulting schema from evaluating a ReplaceInfinity.
      * - :meth:`.visit_drop_infinity`
        - Returns the resulting schema from evaluating a DropInfinity.
      * - :meth:`.visit_drop_null_and_nan`
        - Returns the resulting schema from evaluating a DropNullAndNan.
      * - :meth:`.visit_groupby_count`
        - Returns the resulting schema from evaluating a GroupByCount.
      * - :meth:`.visit_groupby_count_distinct`
        - Returns the resulting schema from evaluating a GroupByCountDistinct.
      * - :meth:`.visit_groupby_quantile`
        - Returns the resulting schema from evaluating a GroupByQuantile.
      * - :meth:`.visit_groupby_bounded_sum`
        - Returns the resulting schema from evaluating a GroupByBoundedSum.
      * - :meth:`.visit_groupby_bounded_average`
        - Returns the resulting schema from evaluating a GroupByBoundedAverage.
      * - :meth:`.visit_groupby_bounded_variance`
        - Returns the resulting schema from evaluating a GroupByBoundedVariance.
      * - :meth:`.visit_groupby_bounded_stdev`
        - Returns the resulting schema from evaluating a GroupByBoundedSTDEV.




   .. automethod:: __init__
   .. py:method:: visit_private_source(self, expr)

      Return the resulting schema from evaluating a PrivateSource.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = PrivateSource("private")
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'B': 'INTEGER'})


   .. py:method:: visit_rename(self, expr)

      Returns the resulting schema from evaluating a Rename.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import PrivateSource, Rename

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = Rename(PrivateSource("private"), {"B": "C"})
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'C': 'INTEGER'})


   .. py:method:: visit_filter(self, expr)

      Returns the resulting schema from evaluating a Filter.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import Filter, PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = Filter(PrivateSource("private"), 'B > 10')
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'B': 'INTEGER'})


   .. py:method:: visit_select(self, expr)

      Returns the resulting schema from evaluating a Select.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import PrivateSource, Select

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = Select(PrivateSource("private"), ["A"])
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR'})


   .. py:method:: visit_map(self, expr)

      Returns the resulting schema from evaluating a Map.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import Map, PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={
      ...         "A": ColumnType.VARCHAR,
      ...         "B": ColumnType.INTEGER,
      ...     },
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query1 = Map( # Augment = False example
      ...     child=PrivateSource("private"),
      ...     f=lambda row: {"C": row["B"] + 1, "D": "A"},
      ...     schema_new_columns=Schema(
      ...         {"C": ColumnType.INTEGER, "D": ColumnType.VARCHAR}
      ...     ),
      ...     augment=False,
      ... )
      >>> query1.accept(output_schema_visitor)
      Schema({'C': 'INTEGER', 'D': 'VARCHAR'})
      >>> query2 = Map( # Augment = True example
      ...     child=PrivateSource("private"),
      ...     f=lambda row: {"C": row["B"] + 1, "D": "A"},
      ...     schema_new_columns=Schema(
      ...         {"C": ColumnType.INTEGER, "D": ColumnType.VARCHAR}
      ...     ),
      ...     augment=True,
      ... )
      >>> query2.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'B': 'INTEGER', 'C': 'INTEGER', 'D': 'VARCHAR'})


   .. py:method:: visit_flat_map(self, expr)

      Returns the resulting schema from evaluating a FlatMap.

      ..
          >>> from tmlt.analytics._schema import ColumnType, Schema
          >>> from tmlt.analytics.query_expr import FlatMap, PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query1 = FlatMap( # Augment = False example
      ...     child=PrivateSource("private"),
      ...     f=lambda row: [{"C": row["B"]}, {"C": row["B"] + 1}],
      ...     max_num_rows=2,
      ...     schema_new_columns=Schema({"C": ColumnType.INTEGER}),
      ...     augment=False,
      ... )
      >>> query1.accept(output_schema_visitor)
      Schema({'C': 'INTEGER'})
      >>> query2 = FlatMap( # Augment = True example
      ...     child=PrivateSource("private"),
      ...     f=lambda row: [{"C": row["B"]}, {"C": row["B"] + 1}],
      ...     max_num_rows=2,
      ...     schema_new_columns=Schema({"C": ColumnType.INTEGER}),
      ...     augment=True,
      ... )
      >>> query2.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'B': 'INTEGER', 'C': 'INTEGER'})
      >>> query3 = FlatMap( # Grouping example
      ...     child=PrivateSource("private"),
      ...     f=lambda row: [{"C": row["B"]}, {"C": row["B"] + 1}],
      ...     max_num_rows=2,
      ...     schema_new_columns=Schema(
      ...         {"C": ColumnType.INTEGER}, grouping_column="C",
      ...     ),
      ...     augment=True,
      ... )
      >>> query3.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'B': 'INTEGER', 'C': 'INTEGER'}, grouping_column='C')


   .. py:method:: visit_join_private(self, expr)

      Returns the resulting schema from evaluating a JoinPrivate.

      The ordering of output columns are:

      1. The join columns
      2. Columns that are only in the left table
      3. Columns that are only in the right table
      4. Columns that are in both tables, but not included in the join columns. These
         columns are included with _left and _right suffixes.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import (
          ...     JoinPrivate, PrivateSource
          ... )
          >>> from tmlt.analytics.truncation_strategy import TruncationStrategy

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="left_source",
      ...     col_types={
      ...         "left_only": ColumnType.DECIMAL,
      ...         "common1": ColumnType.INTEGER,
      ...         "common2": ColumnType.VARCHAR,
      ...         "common3": ColumnType.INTEGER
      ...     },
      ...     stability=1,
      ... )
      >>> catalog.add_private_view(
      ...     source_id="right_source",
      ...     col_types={
      ...         "common1": ColumnType.INTEGER,
      ...         "common2": ColumnType.VARCHAR,
      ...         "common3": ColumnType.INTEGER,
      ...         "right_only": ColumnType.VARCHAR,
      ...    },
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> # join_columns default behavior is ["common1", "common2", "common3"]
      >>> query1 = JoinPrivate(
      ...     child=PrivateSource("left_source"),
      ...     right_operand_expr=PrivateSource("right_source"),
      ...     truncation_strategy_left=TruncationStrategy.DropExcess(1),
      ...     truncation_strategy_right=TruncationStrategy.DropExcess(1),
      ... )
      >>> query1.accept(output_schema_visitor)
      Schema({'common1': 'INTEGER', 'common2': 'VARCHAR', 'common3': 'INTEGER', 'left_only': 'DECIMAL', 'right_only': 'VARCHAR'})
      >>> query2 = JoinPrivate(
      ...     child=PrivateSource("left_source"),
      ...     right_operand_expr=PrivateSource("right_source"),
      ...     truncation_strategy_left=TruncationStrategy.DropExcess(1),
      ...     truncation_strategy_right=TruncationStrategy.DropExcess(1),
      ...     join_columns=["common3"],
      ... )
      >>> query2.accept(output_schema_visitor)
      Schema({'common3': 'INTEGER', 'left_only': 'DECIMAL', 'common1_left': 'INTEGER', 'common2_left': 'VARCHAR', 'common1_right': 'INTEGER', 'common2_right': 'VARCHAR', 'right_only': 'VARCHAR'})


   .. py:method:: visit_join_public(self, expr)

      Returns the resulting schema from evaluating a JoinPublic.

      Has analogous behavior to :meth:`OutputSchemaVisitor.visit_join_private`,
      where the private table is the left table.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.query_expr import JoinPublic, PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> catalog.add_public_source(
      ...     "public", {"B": ColumnType.INTEGER, "C": ColumnType.DECIMAL}
      ... )
      >>> query = JoinPublic(
      ...    child=PrivateSource("private"), public_table="public"
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'B': 'INTEGER', 'A': 'VARCHAR', 'C': 'DECIMAL'})


   .. py:method:: visit_replace_null_and_nan(self, expr)

      Returns the resulting schema from evaluating a ReplaceNullAndNan.


   .. py:method:: visit_replace_infinity(self, expr)

      Returns the resulting schema from evaluating a ReplaceInfinity.


   .. py:method:: visit_drop_infinity(self, expr)

      Returns the resulting schema from evaluating a DropInfinity.


   .. py:method:: visit_drop_null_and_nan(self, expr)

      Returns the resulting schema from evaluating a DropNullAndNan.


   .. py:method:: visit_groupby_count(self, expr)

      Returns the resulting schema from evaluating a GroupByCount.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByCount(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     output_column="count",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'count': 'INTEGER'})


   .. py:method:: visit_groupby_count_distinct(self, expr)

      Returns the resulting schema from evaluating a GroupByCountDistinct.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByCountDistinct(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     output_column="count_distinct",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'count_distinct': 'INTEGER'})


   .. py:method:: visit_groupby_quantile(self, expr)

      Returns the resulting schema from evaluating a GroupByQuantile.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByQuantile(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     measure_column="B",
      ...     quantile=0.5,
      ...     low=0,
      ...     high=10,
      ...     output_column="quantile",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'quantile': 'DECIMAL'})


   .. py:method:: visit_groupby_bounded_sum(self, expr)

      Returns the resulting schema from evaluating a GroupByBoundedSum.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByBoundedSum(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     measure_column="B",
      ...     low=0,
      ...     high=10,
      ...     output_column="sum",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'sum': 'INTEGER'})


   .. py:method:: visit_groupby_bounded_average(self, expr)

      Returns the resulting schema from evaluating a GroupByBoundedAverage.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByBoundedAverage(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     measure_column="B",
      ...     low=0,
      ...     high=10,
      ...     output_column="average",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'average': 'DECIMAL'})


   .. py:method:: visit_groupby_bounded_variance(self, expr)

      Returns the resulting schema from evaluating a GroupByBoundedVariance.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByBoundedAverage(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     measure_column="B",
      ...     low=0,
      ...     high=10,
      ...     output_column="variance",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'variance': 'DECIMAL'})


   .. py:method:: visit_groupby_bounded_stdev(self, expr)

      Returns the resulting schema from evaluating a GroupByBoundedSTDEV.

      ..
          >>> from tmlt.analytics._schema import ColumnType
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_expr import PrivateSource

      .. rubric:: Example

      >>> catalog = Catalog()
      >>> catalog.add_private_source(
      ...     source_id="private",
      ...     col_types={"A": ColumnType.VARCHAR, "B": ColumnType.INTEGER},
      ...     stability=1,
      ... )
      >>> output_schema_visitor = OutputSchemaVisitor(catalog)
      >>> query = GroupByBoundedSTDEV(
      ...     child=PrivateSource("private"),
      ...     groupby_keys=KeySet.from_dict({"A": ["a1", "a2", "a3"]}),
      ...     measure_column="B",
      ...     low=0,
      ...     high=10,
      ...     output_column="stdev",
      ... )
      >>> query.accept(output_schema_visitor)
      Schema({'A': 'VARCHAR', 'stdev': 'DECIMAL'})






